      output which makes them easier to spot when there is
      lots of output. (Closes: #430392)
  * Remove dependency on libept, now access debtags and Xapian
    directly.  (Closes: #501732, #504153, #677551)
  * Depend on libxapian instead.
  * Depend on newer version of libapt-pkg for architecture
    specification string support.
  * Translation updates:
    - Polish (Closes: #678153)

 -- Daniel Hartwig <mandyke@gmail.com>  Sat, 30 Jun 2012 19:57:24 +0800

aptitude (0.6.8-1) unstable; urgency=low
  
  * Fix build with g++ 4.7
    Thanks Adrian Lang for the patch (Closes: #672335)
  * New binary packages:
    - aptitude-doc-it: Italian documentation (Closes: #674664)
    - aptitude-common: data files and translations
  * debian/rules:
    - use dh (debhelper command sequencer)
  * Require libapt-pkg 0.9.3 to avoid "Method http has died
    unexpectedly" (Closes: #669322)
  * Removed preinst script, the one transition it handled is
    over ten years old.
  * New upstream release.
    - Update to tasks support: task packages, multi-arch, syntax

      Task packages (introduced with tasksel 3.0) are
      meta-packages which define the dependencies of tasks.  The
      packages themselves have always worked but the 'tasks'
      grouping policy and '?task' search term did not support
      them.  This update corrects for this.

      As a result of this change to tasksel all Debian tasks now
      function exactly like meta-packages. (Closes: #382631)

      The syntax for installing tasks from the command line has
      been updated.  It now supports specifying an arch and
      requires the same syntax as apt-utils ('^' must be the last
      part of the name).  Examples:

        # aptitude install gnome-desktop^
        # aptitude install ssh-server^:armel

      This avoids ambiguity that may arise when a task and
      package have the same name.
    - Changelog downloading is restored
      (Closes: #669569, LP: #824708)