@@ -26,6 +26,13 @@ BUILDDIR=build-arch
 %:
 	dh $@ --parallel --builddirectory=$(BUILDDIR) --dbg-package=aptitude-dbg
 
+override_dh_clean:
+	dh_clean
+	# Clean up extra translated files which po4a is leaving.
+	for lc in de es fr it ja pl; \
+	do rm -f "doc/$$lc/manpage.xml" "doc/$$lc/aptitude.xml"; \
+	done
+
 override_dh_auto_configure:
 	dh_auto_configure -- \
 	    --htmldir='$${docdir}/html' \
